<?xml version="1.0"?>
<package>
  <name>ypspur_ros_bridge</name>
  <version>1.0.0</version>
  <description>The ypspur_ros_bridge package</description>

  <maintainer email="GRoadPG@gmail.com">RyodoTanaka</maintainer>
  <author>Ryodo Tanaka</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>

</package>
